[tool.poetry]
name = "strip-ansi"
version = "0.1.0"
description = "Strip ANSI escape sequences from a string"
authors = ["Ewen Le Bihan <ewen.lebihan7@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/ewen-lbh/python-strip-ansi"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
